# TeDDy

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  architect.yaml  clarity_test.txt  dev.yaml  fail_labels.md  manual_plan.md  manual_test.py  package-lock.json  package.json  pyproject.toml
.githooks/: check_core_di_boundary.py  check_explicit_utf8.py  post-commit  post-commit.py
.github/workflows/: ci.yml  debug-probe.yml  debug-spike.yml  debug-windows-shell.yml  debug.yml  publish.yml
Bookmarklets/: DuckDuckGo SERP Scraper.js  Google SERP scraper.js
Prompts/: architect.xml  debugger.xml  dev.xml  prototyper.xml
Prompts/requirements/: architect.md  debugger.md  dev.md  prototyper.md
bookmarklets/: Google SERP scraper.js
config/: config.yaml  init.context
debug/: mre_context_crash.py  repro_path_issue.py  trace_context.py
debug/repro_root/: long_spec.md
docs/: ARCHITECTURE.md  README.md
docs/architecture/: ARCHITECTURE.md
docs/briefs/: 01-comprehensive-refactoring.md  02-generalized-clipboard-output.md  03-quality-of-life-improvements.md  04-cli-ux-improvements.md  05-cli-refinements-and-bug-fixes.md  05-interactive-session-workflow.md  05-markdown-parser-brief.md  05-project-restructuring-brief.md  05-project-restructuring.md  05-repository-flattening.md  06-interactive-session-workflow.md  06-interactive-workflow-and-cli-refinements-brief.md  06-markdown-parser-brief.md  06-markdown-parser.md  07-documentation-alignment-brief.md  07-interactive-workflow-and-cli-refinements-brief.md  07-interactive-workflow-and-cli-refinements.md  07-markdown-report-generator.md  08-documentation-alignment-brief.md  08-documentation-alignment.md  08-interactive-workflow-and-cli-refinements.md  08-llm-client-and-config-service.md  09-documentation-alignment.md  09-interactive-workflow-and-cli-refinements.md  09-llm-client-and-config-service.md  10-interactive-workflow-and-cli-refinements.md  10-refactor-legacy-dtos.md  11-documentation-alignment.md  12-refactor-legacy-dtos.md
docs/core/: domain_model.md
docs/guides/: README.md
docs/project/: DASHBOARD.md  PROJECT.md
docs/rca/: 2024-07-25_dataclass-inheritance-type-error.md  2024-07-26_mock-factory-return-value-misconfiguration.md  2024-07-29_Mypy-Pre-commit-Stub-Not-Installed.md  2024-07-29_refactoring-desync-attribute-name-error.md  2024-12-15_Typer-ImportError-Depends.md  absolute-path-resolution-bug.md  acceptance-test-assertion-typo-failed-vs-failure.md  adapter-path-resolution-bug.md  edit-action-test-regressions.md  flawed-edit-action-validation-test.md  inconsistent-failure-report-formatting.md  invalid-yaml-generation-in-edit-test.md  multiline-edit-matching-failure.md  unreliable-third-party-library-gitwalk.md  windows-unicode-encode-error.md  yaml-formatting-bug.md
docs/slices/: 01-markdown-report-generator.md  01-walking-skeleton.md  02-create-file-action.md  02-markdown-report-fixes.md  02-smart-adapter-and-stdin.md  03-skipped-run-status.md  04-read-action.md  05-refactor-test-setup.md  06-edit-action.md  06-markdown-parser.md  07-update-action-failure-behavior.md  09-enhance-edit-action-safety.md  11-refactor-report-to-yaml.md  11-smart-indentation-for-edit-action.md  12-research-action.md  13-context-command.md  24-change-preview-feature.md  29-concise-report-and-validation-refactor.md  30-cross-platform-path-handling.md  32-comprehensive-edit-validation.md  33-report-generation-enhancements.md  34-progress-logging.md
docs/specs/: concise-report-format.md  context-payload-format.md  contextual-history-and-feedback.md  core-philosophy.md  foundational-restructuring.md  interactive-session-workflow.md  manual-cli-workflow.md  new-plan-format.md  plan-execution-context.md  plan-format-validation.md  report-format.md  teddy-directory-structure.md
docs/tasks/: 01-tui-polish.md
executor/: pyproject.toml
prompts/: architect.xml  assistant.xml  debugger.xml  dev.xml  developer.xml  explorer.xml  navigator.xml  pathfinder.xml  prototyper.xml  spiker.xml
prompts/requirements/: architect.md  dev.md  prototyper.md
prototypes/: edit_indentation_spike.py  final_session_ux_showcase.py  github_issue_scraper_spike.py  isolation_logic.py  slice_00_05_logic.py  telemetry_color_matrix.py  tui_canonical_final.py  tui_deferred_harvest.py  tui_performance_check.py  tui_polish_spike.py  tui_section_nav_spike.py  tui_ui_integration_spike.py
prototypes/00-03/: showcase.sh  telemetry_prototype.py
prototypes/00-04/: context_logic_prototype.py  runner.py  showcase.sh  showcase_integrated.sh  token_counting_prototype.py  tui_prototype.py  ui_extensions.py
scripts/: install-hooks.sh  verify_test_pyramid.py
spikes/debug/: 02_repro_prune.py  03_repro_session_break.py  06-windows-interactive-probe.sh  12-git-detection-rpp.py  16-mre-path-context-verified.py  17-fallback-probe.py  17-invalid-model-mre.py  17-mre-fix-verified.py  18-mre-encoding.py  18-mre-systemic-fix.py  mre.py  mre_runner.py  oracle.py  remote_probe.py  remote_probe.sh  solution_verifier.py  solution_verifier.sh
spikes/prototypes/: 00-04-session-history-prototype.py  00-25-history-log-corrected.py  00-25-history-log-final.py  00-25-history-log-fixed.py  00-25-history-log-live.py  00-25-history-log-real.py  00-25-history-log-run.py  00-25-history-log.py  00-console-visibility.py  02-03-safety-limits.py  02-08-provider-routing.py  02-09-web-content-caching.py  02-11-ast-parser-resilience.py  02-13-validation-failure-timing.py  10-preserve-user-message-turns.py  12-config-validation-retry.py
spikes/showcases/: 03-openrouter-resilience.py
src/teddy/: __main__.py  main.py
src/teddy_executor/: __init__.py  __main__.py  container.py  main.py  prompts.py
tests/: conftest.py  test_infrastructure_smoke.py
tests/acceptance/: conftest.py  helpers.py  plan_builder.py  test_action_failure_behavior.py  test_action_isolation.py  test_ai_telemetry.py  test_all_validation_errors_show_ast.py  test_auto_initialization.py  test_auto_skip_on_failure.py  test_change_preview_feature.py  test_chat_with_user_action.py  (+57 more)
(+1183 files in other folders)
