[tool.poetry]
name = "teddy-executor"
version = "0.1.0"
description = "A CLI tool to safely execute AI-generated action plans."
authors = ["atte500"]
license = "MIT"
packages = [{ include = "teddy_executor", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
typer = { version = "*", extras = ["all"] }
pyperclip = "*"
playwright = "*"
httpx = "^0.28.1"
beautifulsoup4 = "^4.14.3"
requests = "^2.33.0"
ddgs = "^9.10.0"
pathspec = "^0.12.1"
punq = "^0.7.0"
mistletoe = "^1.3.0"
jinja2 = "^3.1.6"
trafilatura = "^2.0.0"
lxml = "^6.1.0"
python-dotenv = "^1.2.2"
litellm = "^1.83.0"
pyyaml = ">=6.0,<7.0"
detect-secrets = ">=1.4,<2.0"
bandit = ">=1.7.9,<1.8.0"
pip-audit = ">=2.7.3,<2.8.0"
textual = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
ruff = "*"
mypy = "*"
pre-commit = "*"
responses = "^0.25.8"
pytest-httpserver = "^1.1.3"
types-requests = "^2.32.4.20250913"
pytest-timeout = "^2.4.0"
pyfakefs = "^6.1.1"
vulture = "^2.14"
pytest-cov = "^7.0.0"
types-pyyaml = "^6.0.12.20250915"
pytest-xdist = "^3.8.0"

[tool.poetry.scripts]
teddy = "teddy_executor.__main__:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
exclude = ["spikes/", "prototypes/"]

[tool.ruff.lint]
# Enable Pyflakes (F), Pycodestyle (E, W), Pylint Refactor (PLR), and McCabe complexity (C90)
select = ["F", "E", "W", "C901", "PLR"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Ignore magic values in tests
"tests/**/*" = ["PLR2004"]
# Whitelist is a manifest of references, not logic
"tests/harness/vulture_whitelist.py" = ["C901", "PLR0915", "PLR0913"]

[tool.ruff.lint.mccabe]
# Enforce a maximum cyclomatic complexity of 9
max-complexity = 9

[tool.ruff.lint.pylint]
# Enforce a maximum of 40 statements per function
max-statements = 40

[tool.vulture]
exclude = ["spikes/", "prototypes/"]
ignore_names = [
    # Generic Port Parameters (Noise)
    "edits",
    "threshold",
    "match_all",
    "context_files",
    "messages",
    "model",
    "command",
    "timeout",
    "background",
    "default",
    "resources",
    "target_agent",
    "turn_cost",
    "is_validation_failure",
    "new_name",
    "old_name",
    "user_message",
    "overwrite",
    "similarity_threshold",
    "file_paths",
    "paths",
    "is_concise",
    "filename",
    "data",
    "agent",
    "dest_dir",
    "src_dir",
    "args",
    "check",
    "mode",
    "url",
    "x",
    "expand",
    "total_actions",
    "agent_name",
    "action_prompt",
    "old_path",
    "new_path",
    "reason",
    "text",
    "path",
    # Textual UI Framework Callbacks
    "on_*",
    "action_*",
    # Interface parameters (Protocols) and Test Fixtures
    "queries",
    "start_time",
    "interactive",
    "kwargs",
    "session_name",
    "cwd",
    "mock_*",
]
min_confidence = 80
paths = ["src", "tests"]
sort_by_size = true

[tool.mypy]
ignore_missing_imports = true
exclude = ["spikes/", "prototypes/"]

[tool.bandit]
exclude_dirs = ["spikes", "prototypes"]
# Exclude specific patterns in tests that look like secrets but are test data
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
norecursedirs = "spikes"
addopts = [
    "-n",
    "auto",
    "--import-mode=importlib",
    "--timeout=5",
]
filterwarnings = [
    "ignore:No data was collected:coverage.exceptions.CoverageWarning",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if sys.platform != .win32.:",
    "if sys.platform == .win32.:",
    "if os.getenv(.TEDDY_DEBUG.):",
]
