[tool.poetry]
name = "teddy-cli"
version = "0.1.5"
description = "A local-first, file-based AI coding workflow that applies the UNIX philosophy to AI collaboration."
authors = ["Raphael Atteritano"]
license = "AGPL-3.0-only"
packages = [{ include = "teddy_executor", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11, <3.15"
typer = { version = "*", extras = ["all"] }
pyperclip = "*"
playwright = "*"
httpx = "^0.28.1"
beautifulsoup4 = "^4.14.3"
requests = "^2.33.0"
ddgs = "^9.10.0"
pathspec = "^0.12.1"
punq = "^0.7.0"
mistletoe = "^1.3.0"
jinja2 = "^3.1.6"
trafilatura = "^2.0.0"
lxml = "^6.1.0"
python-dotenv = ">=1.0.1"
litellm = ">=1.83.7,<1.83.8"
pyyaml = ">=6.0,<7.0"
detect-secrets = ">=1.4,<2.0"
bandit = ">=1.7.9,<1.8.0"
pip-audit = ">=2.7.3,<2.8.0"
textual = "^8.1.0"
urllib3 = "^2.7.0"
tld = ">=0.10,<1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
ruff = "*"
mypy = "*"
pre-commit = "*"
responses = "^0.25.8"
pytest-httpserver = "^1.1.3"
types-requests = "^2.32.4.20250913"
pytest-timeout = "^2.4.0"
pyfakefs = "^6.1.1"
pytest-cov = "^7.0.0"
types-pyyaml = "^6.0.12.20250915"
pytest-xdist = "^3.8.0"

[tool.poetry.scripts]
teddy = "teddy_executor.__main__:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
exclude = ["spikes/"]

[tool.ruff.lint]
# Enable Pyflakes (F), Pycodestyle (E, W), Pylint Refactor (PLR), McCabe complexity (C90), and Tidy Imports (TID)
select = ["F", "E", "W", "C901", "PLR", "TID"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports]
# Ban unittest.mock.patch to prevent state leakage and encourage DI
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"unittest.mock.patch".msg = "Use Constructor Injection or the Test Harness instead of global patching."
"mock.patch".msg = "Use Constructor Injection or the Test Harness instead of global patching."
"unittest.mock.MagicMock".msg = "Use tests.harness.setup.mocking.register_mock (which auto-specs) instead of bare MagicMocks."
"mock.MagicMock".msg = "Use tests.harness.setup.mocking.register_mock (which auto-specs) instead of bare MagicMocks."

[tool.ruff.lint.per-file-ignores]
# Ignore magic values in tests
"tests/**/*" = ["PLR2004"]

[tool.ruff.lint.mccabe]
# Enforce a maximum cyclomatic complexity of 9
max-complexity = 9

[tool.ruff.lint.pylint]
# Enforce a maximum of 40 statements per function
max-statements = 40


[tool.mypy]
ignore_missing_imports = true
exclude = ["spikes/"]

[tool.bandit]
exclude_dirs = ["spikes"]
# Exclude specific patterns in tests that look like secrets but are test data
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
norecursedirs = "spikes"
addopts = [
    "-n",
    "auto",
    "--import-mode=importlib",
    "--timeout=5",
]
filterwarnings = [
    "ignore:No data was collected:coverage.exceptions.CoverageWarning",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if sys.platform != .win32.:",
    "if sys.platform == .win32.:",
    "if os.getenv(.TEDDY_DEBUG.):",
]
